--- a/backend/package.json
+++ b/backend/package.json
@@ -46,6 +46,7 @@
     "web-push": "^3.6.6"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
