--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "author": "AgriAI Team",
   "license": "MIT",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@tensorflow/tfjs-node": "^4.15.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
